<resources>
    <string name="app_name">MineSweeper</string>
    <string name="course_label">CSCI310</string>
    <string name="student_name">seanasmi@usc.edu</string>
    <string name="clock">\uD83D\uDD53</string>
    <string name="flag">\uD83D\uDEA9</string>
    <string name="mine">\uD83D\uDCA3</string>
    <string name="pick">\u26CF</string>
    <string name="mode_dig">DIG MODE</string>
    <string name="play_again">PLAY AGAIN</string>
</resources>